Scaffolded the database using the database first approach

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BookStoreDbAppConnection": "Server=.\SQLEXPRESS;Database=BookAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
