Did the first part of adding data transfer objects so the api functions aren't using the author entity/table to reference data

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BookStoreDbAppConnection": "Server=.\SQLEXPRESS;Database=BookAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BookStoreDbAppConnection": "Server=.\\SQLEXPRESS;Database=BookAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Serilog": {
     "MinimumLevel": {
