Finished Configuration of Identity and Authorization

--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -26,5 +26,10 @@
       }
     ]
   },
+  "JwtSettings": {
+    "Issuer": "BookStoreAPI",
+    "Audience": "BookStoreApiClient",
+    "Duration": "1"
+  },
   "AllowedHosts": "*"
 }
